# LUNAR

./: .gitignore  LICENSE  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
config/: godot_todo.md  neat-config  sim-config.yaml
documentation/: LUNAR_Documentation.docx  Vorlage_DA_V2.0_2025.docx
godot/: .gitignore  180.tscn  180.tscn.remap  90.tscn  90.tscn.remap  AE3.png.import  Apfel.tscn  Apfel.tscn.remap  Background.jfif  Background.png.import  Bild.jpg.import  Busch.PNG.import  Bush.tscn  Code_Monster.gd  Code_Monster.gd.uid  EasyMenusLogo.png.import  HUD.tscn  Hitgub.tscn  Menue.gdshader  Menue.gdshader.uid  Menue.tscn  MinecraftDancing.ogv  MinecraftDancing.ogv.uid  Monster.tscn  Monster.tscn.remap  Tile.gd  Tile.gd.uid  Tilese.png.import  Tilesetbessa.png.import  Tilesetbessa2.png.import  ZweitesMonster.tscn  control.tscn  export_presets.cfg  freeorg.mp3.import  hud.gd  hud.gd.uid  icon.png.import  icon.svg.import  menue.gd  menue.gd.uid  (+12 more)
godot/Assets/: image.png.import
godot/Demos/: CharacterBody2D.gd.uid  Demo1.gd.uid  Demo2.gd.uid  Demo3.gd.uid
godot_vis/: icon.svg.import  project.godot
python_sim/: config  environment.py  godot_socket.py  json_builder.py  logger_setup.py  main.py  neat_runner.py  noise_runner.py  organism.py  resources.py  server_handler.py  world_generator.py
scripts/: client_disconnect.py  disconnect_client.py  dummy_client.py  main.py  orchestrator.py  simulate.py  train.py
tests/: notes_asyncio.py  notes_multiprocessing.py  test_json_conversion.py  test_load_config.py  test_logger.py  test_multiprocessing.py
(+105 files in other folders)
